@@ -88,18 +88,49 @@ module Mail
     # Decodes a given string as Base64 or Quoted Printable, depending on what
     # type it is.
     # 
-    # 
+    # String has to be of the format =?<encoding>?[QB]?<string>?=
     def Encodings.value_decode(str)
-      case
-      when str =~ /\=\?.+?\?B\?.+?\?\=/
-        Encodings.b_value_decode(str)
-      when str =~ /\=\?.+?\?Q\?.+?\?\=/
-        Encodings.q_value_decode(str)
-      else
-        str
+      str.gsub!(/\?=(\s*)=\?/, '?==?') # Remove whitespaces between 'encoded-word's
+      str.gsub(/(.*?)(=\?.*?\?.\?.*?\?=)|$/) do
+        before = $1.to_s
+        text = $2.to_s
+        
+        case
+        when text =~ /=\?.+\?[Bb]\?/
+          before + b_value_decode(text)
+        when text =~ /=\?.+\?[Qq]\?/
+          before + q_value_decode(text)
+        else
+          before + text
+        end
       end
     end
+    
+    # Takes an encoded string of the format =?<encoding>?[QB]?<string>?=
+    def Encodings.unquote_and_convert_to(str, to_encoding)
+      original_encoding, string = split_encoding_from_string( str )
 
+      output = value_decode( str ).to_s
+
+      if original_encoding.to_s.downcase.gsub("-", "") == to_encoding.to_s.downcase.gsub("-", "")
+        output
+      elsif original_encoding && to_encoding
+        begin
+          Iconv.iconv(to_encoding, original_encoding, output).first
+        rescue Iconv::IllegalSequence, Iconv::InvalidEncoding, Errno::EINVAL
+          # the 'from' parameter specifies a charset other than what the text
+          # actually is...not much we can do in this case but just return the
+          # unconverted text.
+          #
+          # Ditto if either parameter represents an unknown charset, like
+          # X-UNKNOWN.
+          output
+        end
+      else
+        output
+      end
+    end
+    
     # Encode a string with Base64 Encoding and returns it ready to be inserted
     # as a value for a field, that is, in the =?<charset>?B?<string>?= format
     #
@@ -114,19 +145,6 @@ module Mail
       end.join(" ")
     end
     
-    # Decodes a Base64 string from the "=?UTF-8?B?VGhpcyBpcyDjgYIgc3RyaW5n?=" format
-    # 
-    # Example:
-    # 
-    #  Encodings.b_value_encode("=?UTF-8?B?VGhpcyBpcyDjgYIgc3RyaW5n?=") 
-    #  #=> 'This is あ string'
-    def Encodings.b_value_decode(str)
-      string = str.split(Mail::Patterns::WSP)
-      string.flatten.map do |s|
-        RubyVer.b_value_decode(s)
-      end.join('')
-    end
-    
     # Encode a string with Quoted-Printable Encoding and returns it ready to be inserted
     # as a value for a field, that is, in the =?<charset>?Q?<string>?= format
     #
@@ -139,6 +157,18 @@ module Mail
       "=?#{encoding}?Q?#{string.chomp}?="
     end
     
+    private
+    
+    # Decodes a Base64 string from the "=?UTF-8?B?VGhpcyBpcyDjgYIgc3RyaW5n?=" format
+    # 
+    # Example:
+    # 
+    #  Encodings.b_value_encode("=?UTF-8?B?VGhpcyBpcyDjgYIgc3RyaW5n?=") 
+    #  #=> 'This is あ string'
+    def Encodings.b_value_decode(str)
+      RubyVer.b_value_decode(str)
+    end
+    
     # Decodes a Quoted-Printable string from the "=?UTF-8?Q?This_is_=E3=81=82_string?=" format
     # 
     # Example:
@@ -146,13 +176,17 @@ module Mail
     #  Encodings.b_value_encode("=?UTF-8?Q?This_is_=E3=81=82_string?=") 
     #  #=> 'This is あ string'
     def Encodings.q_value_decode(str)
-      string = str.split(Mail::Patterns::WSP)
-      string.flatten.map do |s|
-        RubyVer.q_value_decode(s)
-      end.join('')
+      RubyVer.q_value_decode(str)
     end
     
-    private
+    def Encodings.split_encoding_from_string( str )
+      match = str.match(/\=\?(.+)?\?[QB]\?(.+)?\?\=/i)
+      if match
+        [match[1], match[2]]
+      else
+        nil
+      end
+    end
     
     def Encodings.find_encoding(str)
       RUBY_VERSION >= '1.9' ? str.encoding : $KCODE
