@@ -1,3 +1,7 @@
+== Sat Nov 21 12:52:46 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>
+
+* Changed Mail::Encodings to clean it up, added in unquote_and_convert_to as well as refactor in this area
+
 == Thu Nov 19 04:16:10 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>
 
 * Added sendmail support from (Simon Rozet)
